--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ kramdown:
 # Site owner
 owner:
   name: Dieuwke Hupkes
-  avatar: DHupkes.jpg
+  avatar: dieuwk.jpg
   # bio: "Describe your self."
   email: 
   disqus-shortname: 
