--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,7 @@
 
 - title: Research
   url: https://dieuwkehupkes.github.io/research/
+  target: _self
 
 - title: Projects
   url: https://dieuwkehupkes.github.io/projects/
