--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # site navigation links
 
 - title: Home
-  url: /home/
+  url: https://dieuwkehupkes.github.io/home/
 
 - title: Research
-  url: /research/
+  url: https://dieuwkehupkes.github.io/research/
 
 - title: Projects
-  url: /projects/
+  url: https://dieuwkehupkes.github.io/projects/
 
 - title: CV
-  url: /cv/
+  url: https://dieuwkehupkes.github.io/cv/
