Add links to linkedIn and github

--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ owner:
     ad-client: 
     ad-slot: 
   bing-verify: 
-  github: #username
+  github: dieuwkehupkes
   stackoverflow: #http://stackoverflow.com/users/123456/username
-  linkedin: #username
+  linkedin: dieuwke-hupkes
   xing: #username
   instagram: #username
   lastfm: #username
