--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ owner:
   bing-verify: 
   github: dieuwkehupkes
   stackoverflow: #http://stackoverflow.com/users/123456/username
-  linkedin: dieuwke-hupkes
+  linkedin: dieuwke-hupkes/84/656/707
   xing: #username
   instagram: #username
   lastfm: #username
