--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ owner:
   github: dieuwkehupkes
   stackoverflow: #http://stackoverflow.com/users/123456/username
   linkedin: dieuwke-hupkes/84/656/707
+  instagram: https://www.instagram.com/duo_polenotti/
   xing: #username
   lastfm: #username
   tumblr: #username
