--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@
 - title: Research
   url: /research/
 
-- title: Publications
-  url: /publications/
+# - title: Publications
+# url: /publications/
 
 # - title: Teaching
 # url: /teaching/
