Add page for talks

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,14 @@
 - title: About
   url: /"/"/
 
-- title: Research
-  url: /research/
+# - title: Research
+#   url: /research/
 
-# - title: Publications
-# url: /publications/
+- title: Publications
+url: /publications/
+
+- title: Talks
+url: /talks/
 
 # - title: Teaching
 # url: /teaching/
