add teaching page, move some files around

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@
 # - title: Projects
 #  url: /projects/
 
-- title: CV
-  url: /cv/
+- title: Teaching
+  url: /teaching/
 
 - title: Posts
   url: /posts/
