Remove 'post' page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,8 @@
 - title: Teaching
   url: /teaching/
 
-- title: Posts
-  url: /posts/
+# - title: News
+#   url: /news/
+
+# - title: Posts
+#   url: /posts/
