--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ kramdown:
 # Site owner
 owner:
   name: Dieuwke Hupkes
-  avatar: dieuwk.jpg
+  avatar: DHupkes.jpg
   bio: "PhD student at the University of Amsterdam, interested in structures in language"
   email: d.hupkes@uva.nl
   disqus-shortname: 
