--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Dieuwke Hupkes
   avatar: DHupkes.jpg
-  bio: "PhD student at the University of Amsterdam, interested in structures in language"
+  bio: "Temporary lecturer at the University of Amsterdam, interested in structures in language"
   email: d.hupkes@uva.nl
   disqus-shortname: 
   google:
