--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ owner:
   bing-verify: 
   github: dieuwkehupkes
   stackoverflow: #http://stackoverflow.com/users/123456/username
-  linkedin: dieuwke-hupkes/84/656/707
+  linkedin:
   instagram: duo_polenotti
   twitter: _dieuwke_
   xing: #username
