Update job description

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Dieuwke Hupkes
   avatar: DHupkes.jpg
-  bio: "Postdoc and scientific manager of the ELLIS Amsterdam unit, interested in structures in language"
+  bio: "Research scientist at FAIR, scientific manager of the ELLIS Amsterdam unit, interested in structures in language"
   email: d.hupkes@uva.nl
   disqus-shortname: 
   google:
