--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ owner:
   name: Dieuwke Hupkes
   avatar: DHupkes.jpg
   bio: "Research scientist at FAIR, scientific manager of the ELLIS Amsterdam unit, interested in structures in language"
-  email: d.hupkes@uva.nl
+  email: dieuwkehupkes@fb.com
   disqus-shortname: 
   google:
     plus: #username
