Add new image to website

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ kramdown:
 # Site owner
 owner:
   name: Dieuwke Hupkes
-  avatar: DHupkes.jpg
+  avatar: headshot_cropped.png
   bio: "Research scientist at FAIR, scientific manager of the ELLIS Amsterdam unit, interested in structures in language"
   email: dieuwkehupkes@fb.com
   disqus-shortname: 
