--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Dieuwke Hupkes
   avatar: headshot_cropped.png
-  bio: "Research scientist at FAIR, scientific manager of the ELLIS Amsterdam unit, interested in structures in language"
+  bio: "Research scientist at FAIR, ELLIS Amsterdam enthusiast, interested in structures in language"
   email: dieuwkehupkes@fb.com
   disqus-shortname: 
   google:
