--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ kramdown:
 owner:
   name: Dieuwke Hupkes
   avatar: headshot_cropped.png
-  bio: "Research scientist at FAIR, ELLIS Amsterdam enthusiast, interested in structures in language"
-  email: dieuwkehupkes@fb.com
+  bio: "Research scientist at Meta, ELLIS Scholar"
+  email: dieuwkehupkes@meta.com
   disqus-shortname: 
   google:
     plus: #username
@@ -41,7 +41,7 @@ owner:
   github: dieuwkehupkes
   stackoverflow: #http://stackoverflow.com/users/123456/username
   linkedin:
-  instagram: duo_polenotti
+  instagram: dieuwkehupkes
   twitter: _dieuwke_
   xing: #username
   lastfm: #username
